# gnsi

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  common.bzl  compile_protos.sh  deps.bzl  gnsi_deps.bzl  gnsi_go_deps.bzl  go.mod  go.sum  regenerate-files.sh
.bcr/: metadata.template.json
.github/workflows/: bazel.yml  linter.yml
accounting/: BUILD.bazel  README.md  acct.pb.go  acct.proto  acct_grpc.pb.go
acctz/: BUILD.bazel  README.md  acctz.pb.go  acctz.proto  acctz_grpc.pb.go  gnsi-acctz.yang
authorization/: BUILD.bazel  README.md  authorization.proto  index.md
authz/: BUILD.bazel  README.md  authz.pb.go  authz.proto  authz_grpc.pb.go  gnsi-authz.html  gnsi-authz.yang
cert/: BUILD.bazel  README.md  cert.pb.go  cert.proto  gnsi-cert.html  gnsi-cert.yang  index.md
certz/: BUILD.bazel  README.md  certz.pb.go  certz.proto  certz_grpc.pb.go  gnsi-certz.html  gnsi-certz.yang
console/: BUILD.bazel  HOWTO.md  README.md  console.proto  gnsi-console.html  gnsi-console.yang
credentialz/: BUILD.bazel  README.md  cred-hiba-check-api-spec.md  credentialz.pb.go  credentialz.proto  credentialz_grpc.pb.go  gnsi-credentialz.html  gnsi-credentialz.yang
pathz/: BUILD.bazel  README.md  authorization-README.md  authorization.pb.go  authorization.proto  gnsi-pathz.html  gnsi-pathz.yang  index.md  pathz.pb.go  pathz.proto  pathz_grpc.pb.go
pathz/authorization/: BUILD.bazel  README.md  authorization.proto
ssh/: BUILD.bazel  HOWTO.md  README.md  gnsi-ssh.html  gnsi-ssh.yang  ssh.proto
version/: BUILD.bazel  version.pb.go  version.proto
yang/: BUILD.bazel  README.md  gnsi-telemetry.html  gnsi-telemetry.yang
