load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/openconfig/gnsi
gazelle(name = "gazelle")

alias(
    name = "yang",
    actual = "//yang:ocbinds",
)

alias(
    name = "authz_go",
    actual = "//authz:authz",
)

alias(
    name = "authz_cc",
    actual = "//authz:authz_cc_proto",
)

alias(
    name = "certz_cc",
    actual = "//certz:certz_cc_proto",
)

alias(
    name = "certz_go",
    actual = "//certz:certz",
)

alias(
    name = "credentialz_go",
    actual = "//credentialz:credentialz",
)

alias(
    name = "credentialz_cc",
    actual = "//credentialz:credentialz_cc_proto",
)

alias(
    name = "pathz_go",
    actual = "//pathz:pathz_go_proto",
)

alias(
    name = "pathz_cc",
    actual = "//pathz:pathz_cc_proto",
)
