load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_test")

# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc_v2, @io_bazel_rules_go//proto:go_proto
# gazelle:proto_import_prefix github.com/openconfig/gnsi
# gazelle:prefix github.com/openconfig/gnsi
# gazelle:resolve proto go github.com/openconfig/gnmi/proto/gnmi/gnmi.proto @openconfig_gnmi//proto/gnmi:gnmi_go_proto
# gazelle:resolve proto github.com/openconfig/gnmi/proto/gnmi/gnmi.proto @openconfig_gnmi//proto/gnmi:gnmi_proto
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=gnsi_go_deps.bzl%gnsi_go_deps",
        "-prune",
    ],
    command = "update-repos",
)

alias(
    name = "authz_go",
    actual = "//authz:authz",
)

alias(
    name = "authz_cc",
    actual = "//authz:authz_cc_proto",
)

alias(
    name = "certz_cc",
    actual = "//certz:certz_cc_proto",
)

alias(
    name = "certz_go",
    actual = "//certz:certz",
)

alias(
    name = "credentialz_go",
    actual = "//credentialz:credentialz",
)

alias(
    name = "credentialz_cc",
    actual = "//credentialz:credentialz_cc_proto",
)

alias(
    name = "pathz_go",
    actual = "//pathz:pathz_go_proto",
)

alias(
    name = "pathz_cc",
    actual = "//pathz:pathz_cc_proto",
)
