load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("//:common.bzl", "use_new_compilers")

package(default_visibility = ["//visibility:public"])

use_new_compilers()

proto_library(
    name = "acctz_proto",
    srcs = ["acctz.proto"],
    import_prefix = "github.com/openconfig/gnsi",
    deps = [
        "//version:version_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

##############################################################################
# C++
##############################################################################
cpp_grpc_library(
    name = "acctz_cc_proto",
    protos = [
        ":acctz_proto",
    ],
    deps = ["//version:version_cc_proto"],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "acctz_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnsi/acctz",
    proto = ":acctz_proto",
    deps = ["//version:version_go_proto"],
)

go_library(
    name = "acctz",
    embed = [":acctz_go_proto"],
    importpath = "github.com/openconfig/gnsi/acctz",
)
