load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "acctz_proto",
    srcs = ["acctz.proto"],
    import_prefix = "github.com/openconfig/gnsi",
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

##############################################################################
# C++
##############################################################################
cc_proto_library(
    name = "acctz_cc_proto",
    deps = [":acctz_proto"],
)

cc_grpc_library(
    name = "acctz_cc_grpc_proto",
    srcs = [":acctz_proto"],
    grpc_only = True,
    deps = [":acctz_cc_proto"],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "acctz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnsi/acctz",
    proto = ":acctz_proto",
)

go_library(
    name = "acctz",
    embed = [":acctz_go_proto"],
    importpath = "github.com/openconfig/gnsi/acctz",
)
