load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "authorization_proto",
    srcs = ["authorization.proto"],
    import_prefix = "github.com/openconfig/gnsi",
    deps = ["@com_github_openconfig_gnmi//proto/gnmi:gnmi_proto"],
)

##############################################################################
# C++
##############################################################################
cpp_grpc_library(
    name = "authorization_cc_proto",
    protos = [
        ":authorization_proto",
        "@com_github_openconfig_gnmi//proto/gnmi:gnmi_proto",
        "@com_github_openconfig_gnmi//proto/gnmi_ext:gnmi_ext_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "authorization_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnsi/authorization",
    proto = ":authorization_proto",
    deps = ["@com_github_openconfig_gnmi//proto/gnmi:gnmi_go_proto"],
)

go_library(
    name = "authorization",
    embed = [":authorization_go_proto"],
    importpath = "github.com/openconfig/gnsi/authorization",
)
