load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "authz_proto",
    srcs = ["authz.proto"],
    import_prefix = "github.com/openconfig/gnsi",
)

##############################################################################
# C++
##############################################################################
cc_proto_library(
    name = "authz_cc_proto",
    deps = [":authz_proto"],
)

cc_grpc_library(
    name = "authz_cc_grpc_proto",
    srcs = [":authz_proto"],
    grpc_only = True,
    deps = [":authz_cc_proto"],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "authz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnsi/authz",
    proto = ":authz_proto",
)

go_library(
    name = "authz",
    embed = [":authz_go_proto"],
    importpath = "github.com/openconfig/gnsi/authz",
)
