load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "cert_proto",
    srcs = ["cert.proto"],
    import_prefix = "github.com/openconfig/gnsi",
    deps = [
        "@com_github_openconfig_gnoi//types:types_proto",
    ],
)

##############################################################################
# C++
##############################################################################

cpp_grpc_library(
    name = "cert_cc_proto",
    protos = [
        ":cert_proto",
        "@com_github_openconfig_gnoi//types:types_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "cert_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnsi/cert",
    proto = ":cert_proto",
    deps = ["@com_github_openconfig_gnoi//types"],
)

go_library(
    name = "cert",
    embed = [":cert_go_proto"],
    importpath = "github.com/openconfig/gnsi/cert",
)
