load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])


proto_library(
    name = "console_proto",
    srcs = ["console.proto"],
    import_prefix = "github.com/openconfig/gnsi",
    deps = ["@com_github_openconfig_gnoi//types:types_proto"],
)

##############################################################################
# C++
##############################################################################

cpp_grpc_library(
    name = "console_cc_proto",
    protos = [
        ":console_proto",
        "@com_github_openconfig_gnoi//types:types_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "console_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnsi/console",
    proto = ":console_proto",
    deps = ["@com_github_openconfig_gnoi//types:types_go_proto"],
)

go_library(
    name = "console",
    embed = [":console_go_proto"],
    importpath = "github.com/openconfig/gnsi/console",
)
