load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("//:common.bzl", "use_new_compilers")
use_new_compilers()

package(default_visibility = ["//visibility:public"])

filegroup( name = "yang", srcs = glob(["*.yang"]))

proto_library(
    name = "credentialz_proto",
    srcs = ["credentialz.proto"],
    import_prefix = "github.com/openconfig/gnsi",
    deps = ["@com_github_openconfig_gnoi//types:types_proto"],
)

##############################################################################
# C++
##############################################################################

cpp_grpc_library(
    name = "credentialz_cc_proto",
    protos = [
        ":credentialz_proto",
        "@com_github_openconfig_gnoi//types:types_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "credentialz_go_proto",
    compilers = ["go_protoc_gen_go", "go_protoc_gen_go_grpc"],
    importpath = "github.com/openconfig/gnsi/credentialz",
    proto = ":credentialz_proto",
    deps = ["@com_github_openconfig_gnoi//types:types_go_proto"],
)

go_library(
    name = "credentialz",
    embed = [":credentialz_go_proto"],
    importpath = "github.com/openconfig/gnsi/credentialz",
)
