load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("//:common.bzl", "use_new_compilers")

use_new_compilers()

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "yang",
    srcs = glob(["*.yang"]),
)

proto_library(
    name = "credentialz_proto",
    srcs = ["credentialz.proto"],
    deps = ["//version:version_proto"],
    import_prefix = "github.com/openconfig/gnsi",
)

##############################################################################
# C++
##############################################################################

cpp_grpc_library(
    name = "credentialz_cc_proto",
    protos = [
        ":credentialz_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
    deps = [
        "//version:version_cc_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "credentialz_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnsi/credentialz",
    proto = ":credentialz_proto",
    deps = ["//version:version_go_proto"],
)

go_library(
    name = "credentialz",
    embed = [":credentialz_go_proto"],
    importpath = "github.com/openconfig/gnsi/credentialz",
)
