load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "credentialz_proto",
    srcs = ["credentialz.proto"],
    import_prefix = "github.com/openconfig/gnsi",
)

##############################################################################
# C++
##############################################################################
cc_proto_library(
    name = "credentialz_cc_proto",
    deps = [":credentialz_proto"],
)

cc_grpc_library(
    name = "credentialz_cc_grpc_proto",
    srcs = [":credentialz_proto"],
    grpc_only = True,
    deps = [":credentialz_cc_proto"],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "credentialz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnsi/credentialz",
    proto = ":credentialz_proto",
)

go_library(
    name = "credentialz",
    embed = [":credentialz_go_proto"],
    importpath = "github.com/openconfig/gnsi/credentialz",
)
