load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")
load("//:common.bzl", "use_new_compilers")

package(default_visibility = ["//visibility:public"])

use_new_compilers()

proto_library(
    name = "pathz_proto",
    srcs = [
        "pathz.proto",
    ],
    import_prefix = "github.com/openconfig/gnsi",
    deps = [
        "@com_github_openconfig_gnmi//proto/gnmi:gnmi_proto",
        "//version:version_proto",
    ],
)

##############################################################################
# C++
##############################################################################
cpp_grpc_library(
    name = "pathz_cc_proto",
    protos = [
        ":pathz_proto",
    ],
    deps = [
        "//version:version_cc_proto",
        "@com_github_openconfig_gnmi//proto/gnmi:gnmi_cc_proto",
    ],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "pathz_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnsi",
    proto = ":pathz_proto",
    deps = [
        "@com_github_openconfig_gnmi//proto/gnmi:gnmi_go_proto",
        "//version:version_go_proto",
    ],
)

go_library(
    name = "pathz",
    embed = [":pathz_go_proto"],
    importpath = "github.com/openconfig/gnsi/pathz",
    deps = [
        "//version:version",
        "@com_github_openconfig_gnmi//proto/gnmi:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
