load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "pathz_proto",
    srcs = [
        "pathz.proto",
    ],
    import_prefix = "github.com/openconfig/gnsi",
    deps = [
        "@openconfig_gnmi//proto/gnmi:gnmi_proto",
    ],
)

##############################################################################
# C++
##############################################################################
cc_proto_library(
    name = "pathz_cc_proto",
    deps = [":pathz_proto"],
)

cc_grpc_library(
    name = "pathz_cc_grpc_proto",
    srcs = [":pathz_proto"],
    grpc_only = True,
    deps = [":pathz_cc_proto"],
)

##############################################################################
# Go
##############################################################################
go_proto_library(
    name = "pathz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/gnsi/pathz",
    proto = ":pathz_proto",
    deps = [
        "@openconfig_gnmi//proto/gnmi:gnmi_go_proto",
    ],
)

go_library(
    name = "pathz",
    embed = [":pathz_go_proto"],
    importpath = "github.com/openconfig/gnsi/pathz",
)
