load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")
load("//:common.bzl", "use_new_compilers")
use_new_compilers()

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "version_proto",
    srcs = [
        "version.proto",
    ],
    deps = ["@com_github_openconfig_gnoi//types:types_proto"],
    import_prefix = "github.com/openconfig/gnsi",
    visibility = ["//visibility:public"],
)

cpp_proto_library(
    name = "version_cc_proto",
    protos = [
        ":version_proto",
        "@com_github_openconfig_gnoi//types:types_proto",
    ],
)

go_proto_library(
    name = "version_go_proto",
    compilers = ["go_protoc_gen_go"],
    importpath = "github.com/openconfig/gnsi/version",
    proto = ":version_proto",
    deps = [
        "@com_github_openconfig_gnoi//types:types_go_proto",
    ],
    visibility = ["//visibility:public"],
)