load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_proto_library")
load("//:common.bzl", "use_new_compilers")

package(default_visibility = ["//visibility:public"])

use_new_compilers()

proto_library(
    name = "version_proto",
    srcs = [
        "version.proto",
    ],
    import_prefix = "github.com/openconfig/gnsi",
    deps = ["@com_github_openconfig_gnoi//types:types_proto"],
)

cpp_proto_library(
    name = "version_cc_proto",
    protos = [
        ":version_proto",
        "@com_github_openconfig_gnoi//types:types_proto",
    ],
)

go_proto_library(
    name = "version_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnsi/version",
    proto = ":version_proto",
    deps = [
        "@com_github_openconfig_gnoi//types",
    ],
)

go_library(
    name = "version",
    embed = [":version_go_proto"],
    importpath = "github.com/openconfig/gnsi/version",
)
