load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ocbinds",
    srcs = [":oc_go"],
    importpath = "github.com/openconfig/gnsi/ocbinds",
    deps = [
        "@com_github_openconfig_ygot//ygot",
        "@com_github_openconfig_ygot//ytypes",
        "@com_github_openconfig_goyang//pkg/yang",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "oc_go",
    srcs = [
        "//authz:yang",
        "//certz:yang",
        "//credentialz:yang",
        "//pathz:yang",
        "@github_openconfig_yang//:release/models/acl/openconfig-acl.yang",
        "@github_openconfig_yang//:release/models/acl/openconfig-packet-match-types.yang",
        "@github_openconfig_yang//:release/models/acl/openconfig-packet-match.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft-common.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft-ethernet.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft-ipv4.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft-ipv6.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft-mpls.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft-pf.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft-types.yang",
        "@github_openconfig_yang//:release/models/aft/openconfig-aft.yang",
        "@github_openconfig_yang//:release/models/bfd/openconfig-bfd.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-common-multiprotocol.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-common-structure.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-common.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-errors.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-global.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-neighbor.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-peer-group.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp-types.yang",
        "@github_openconfig_yang//:release/models/bgp/openconfig-bgp.yang",
        "@github_openconfig_yang//:release/models/interfaces/openconfig-if-aggregate.yang",
        "@github_openconfig_yang//:release/models/interfaces/openconfig-if-ethernet.yang",
        "@github_openconfig_yang//:release/models/interfaces/openconfig-if-types.yang",
        "@github_openconfig_yang//:release/models/interfaces/openconfig-interfaces.yang",
        "@github_openconfig_yang//:release/models/isis/openconfig-isis-lsdb-types.yang",
        "@github_openconfig_yang//:release/models/isis/openconfig-isis-lsp.yang",
        "@github_openconfig_yang//:release/models/isis/openconfig-isis-routing.yang",
        "@github_openconfig_yang//:release/models/isis/openconfig-isis-types.yang",
        "@github_openconfig_yang//:release/models/isis/openconfig-isis.yang",
        "@github_openconfig_yang//:release/models/keychain/openconfig-keychain-types.yang",
        "@github_openconfig_yang//:release/models/keychain/openconfig-keychain.yang",
        "@github_openconfig_yang//:release/models/local-routing/openconfig-local-routing.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls-igp.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls-ldp.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls-rsvp.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls-sr.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls-static.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls-te.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls-types.yang",
        "@github_openconfig_yang//:release/models/mpls/openconfig-mpls.yang",
        "@github_openconfig_yang//:release/models/multicast/openconfig-igmp-types.yang",
        "@github_openconfig_yang//:release/models/multicast/openconfig-igmp.yang",
        "@github_openconfig_yang//:release/models/multicast/openconfig-pim-types.yang",
        "@github_openconfig_yang//:release/models/multicast/openconfig-pim.yang",
        "@github_openconfig_yang//:release/models/network-instance/openconfig-evpn-types.yang",
        "@github_openconfig_yang//:release/models/network-instance/openconfig-evpn.yang",
        "@github_openconfig_yang//:release/models/network-instance/openconfig-network-instance-l2.yang",
        "@github_openconfig_yang//:release/models/network-instance/openconfig-network-instance-l3.yang",
        "@github_openconfig_yang//:release/models/network-instance/openconfig-network-instance-types.yang",
        "@github_openconfig_yang//:release/models/network-instance/openconfig-network-instance.yang",
        "@github_openconfig_yang//:release/models/openconfig-extensions.yang",
        "@github_openconfig_yang//:release/models/ospf/openconfig-ospf-types.yang",
        "@github_openconfig_yang//:release/models/ospf/openconfig-ospfv2-area-interface.yang",
        "@github_openconfig_yang//:release/models/ospf/openconfig-ospfv2-area.yang",
        "@github_openconfig_yang//:release/models/ospf/openconfig-ospfv2-common.yang",
        "@github_openconfig_yang//:release/models/ospf/openconfig-ospfv2-global.yang",
        "@github_openconfig_yang//:release/models/ospf/openconfig-ospfv2-lsdb.yang",
        "@github_openconfig_yang//:release/models/ospf/openconfig-ospfv2.yang",
        "@github_openconfig_yang//:release/models/platform/openconfig-platform-types.yang",
        "@github_openconfig_yang//:release/models/platform/openconfig-platform.yang",
        "@github_openconfig_yang//:release/models/policy-forwarding/openconfig-pf-forwarding-policies.yang",
        "@github_openconfig_yang//:release/models/policy-forwarding/openconfig-pf-interfaces.yang",
        "@github_openconfig_yang//:release/models/policy-forwarding/openconfig-pf-path-groups.yang",
        "@github_openconfig_yang//:release/models/policy-forwarding/openconfig-policy-forwarding.yang",
        "@github_openconfig_yang//:release/models/policy/openconfig-policy-types.yang",
        "@github_openconfig_yang//:release/models/policy/openconfig-routing-policy.yang",
        "@github_openconfig_yang//:release/models/rib/openconfig-rib-bgp-attributes.yang",
        "@github_openconfig_yang//:release/models/rib/openconfig-rib-bgp-shared-attributes.yang",
        "@github_openconfig_yang//:release/models/rib/openconfig-rib-bgp-table-attributes.yang",
        "@github_openconfig_yang//:release/models/rib/openconfig-rib-bgp-tables.yang",
        "@github_openconfig_yang//:release/models/rib/openconfig-rib-bgp-types.yang",
        "@github_openconfig_yang//:release/models/rib/openconfig-rib-bgp.yang",
        "@github_openconfig_yang//:release/models/segment-routing/openconfig-segment-routing-types.yang",
        "@github_openconfig_yang//:release/models/segment-routing/openconfig-segment-routing.yang",
        "@github_openconfig_yang//:release/models/segment-routing/openconfig-srte-policy.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-aaa-radius.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-aaa-tacacs.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-aaa-types.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-aaa.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-alarm-types.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-alarms.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-license.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-messages.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-procmon.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-system-grpc.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-system-logging.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-system-terminal.yang",
        "@github_openconfig_yang//:release/models/system/openconfig-system.yang",
        "@github_openconfig_yang//:release/models/types/openconfig-inet-types.yang",
        "@github_openconfig_yang//:release/models/types/openconfig-types.yang",
        "@github_openconfig_yang//:release/models/types/openconfig-yang-types.yang",
        "@github_openconfig_yang//:release/models/vlan/openconfig-vlan-types.yang",
        "@github_openconfig_yang//:release/models/vlan/openconfig-vlan.yang",
        "@github_yang//:standard/iana/iana-if-type@2021-06-21.yang",
        "@github_yang//:standard/ietf/RFC/ietf-inet-types.yang",
        "@github_yang//:standard/ietf/RFC/ietf-interfaces.yang",
        "@github_yang//:standard/ietf/RFC/ietf-yang-metadata.yang",
        "@github_yang//:standard/ietf/RFC/ietf-yang-types.yang",
    ],
    cmd = "./$(location @com_github_openconfig_ygot//generator) -generate_fakeroot -output_file $@ -package_name ocbinds -generate_fakeroot -fakeroot_name=device -compress_paths=false -exclude_modules ietf-interfaces -path . $(SRCS)",
    outs = ["oc.go"],
    tools =  ["@com_github_openconfig_ygot//generator"],
)